Return mutable lists when zipping