@@ -5,15 +5,18 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collector;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Zipper {
     public static <T> List<List<T>> zip(final List<List<T>> lists) {
         if (lists.isEmpty()) {
-            return Collections.emptyList();
+            return new ArrayList<>();
         }
         final var size = Collections.min(lists, Comparator.comparingInt(List::size)).size();
-        return IntStream.range(0, size).mapToObj(i -> lists.stream().map(list -> list.get(i)).toList()).toList();
+        return IntStream.range(0, size)
+                .mapToObj(i -> lists.stream().map(list -> list.get(i)).collect(Collectors.toList()))
+                .collect(Collectors.toList());
     }
 
     public static <T> Collector<List<T>, List<List<T>>, List<List<T>>> zipCollector() {
@@ -22,7 +25,7 @@ public class Zipper {
 
     private static <T> void zipCollectorAccumulator(final List<List<T>> target, final List<T> source) {
         if (target.isEmpty()) {
-            target.addAll(source.stream().map(List::of).map(ArrayList::new).toList());
+            target.addAll(zip(List.of(source)));
             return;
         }
         final var size = Math.min(target.size(), source.size());
